--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ node_js:
 #deploy:
 #  provider: pages
 #  skip_cleanup: true
-#  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+#  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variabl
 #  keep_history: true
 #  on:
 #    branch: develop
