--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "simple web app to offer quick soft loans",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha ./server/test --recursive --reporter spec",
-     "build":"./node_modules/.bin/gulp"
+    "test": "nyc ./node_modules/.bin/mocha ./server/test --recursive --reporter spec",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "build": "./node_modules/.bin/gulp"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
+    "coveralls": "^3.0.3",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
@@ -33,6 +35,7 @@
     "gulp-babel": "^8.0.0-beta.2",
     "gulp-eslint": "^5.0.0",
     "mocha": "^6.1.4",
+    "nyc": "^14.1.1",
     "request": "^2.88.0",
     "run-sequence": "^2.2.1"
   },
