--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "run-sequence": "^2.2.1"
   },
   "dependencies": {
-    "chai": "^4.2.0",
-    "express": "^4.16.4"
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "swagger-ui-express": "^4.0.3",
+    "chai": "^4.2.0"
   }
 }
