--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: node_js
 node_js:
   - "10.14.1"
-#before_script:
-#  - npm install -g gulp-cli
-#script: gulp
+before_script:
+  - npm install
+   -g gulp-cli
+script:
+ - gulp build
+ - npm test
+
 #deploy:
 #  provider: pages
 #  skip_cleanup: true
@@ -11,4 +15,5 @@ node_js:
 #  keep_history: true
 #  on:
 #    branch: develop
-after_success: npm run coverage
+after_success:
+  - npm run coverage
