--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,14 @@
+
 language: node_js
 node_js:
-  - "10.14.1"
+    - "10.14.1"
 before_script:
-  - npm install
-   -g gulp-cli
+    - npm install
+    - npm i -g gulp-cli
 script:
- - gulp build
- - npm test
-
-#deploy:
-#  provider: pages
-#  skip_cleanup: true
-#  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variabl
-#  keep_history: true
-#  on:
-#    branch: develop
+  - gulp build
+  - npm test
 after_success:
   - npm run coverage
+
+
