--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "nyc ./node_modules/.bin/mocha ./dist/test --recursive --reporter spec",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "build": "./node_modules/.bin/gulp"
+    "build": "./node_modules/.bin/gulp build"
   },
   "repository": {
     "type": "git",
