--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "simple web app to offer quick soft loans",
   "main": "/dist/index.js",
   "scripts": {
-    "start":"node ./dist/index.js",
+    "start": "node ./dist/index.js",
     "test": "nyc ./node_modules/.bin/mocha ./dist/test --recursive --reporter spec",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "build": "./node_modules/.bin/gulp build"
@@ -42,9 +42,11 @@
     "run-sequence": "^2.2.1"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "swagger-ui-express": "^4.0.3",
-    "chai": "^4.2.0"
+    "jsonwebtoken": "^8.5.1",
+    "swagger-ui-express": "^4.0.3"
   }
 }
